src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>C501_Needs_Interpreter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HH, ISA, MLW, NCCC</description>
        <inlineHelpText>Check the box if this family needs an interpreter to communicate with English speakers</inlineHelpText>
        <label>Needs Interpreter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Primary_Languages__c</fullName>
        <description>CCR, HH, ISA, MLW, NCC; All ask about family languages</description>
        <label>Primary Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Referral_Date__c</fullName>
        <description>HH Referral: &quot;Today&apos;s Date&quot;; ISA Referral: &quot;Date&quot;</description>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_Referral_Notes__c</fullName>
        <description>CORE App - referral process; used in fieldsets available on an external site to collect additional information from referring partners</description>
        <label>Referral Notes</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C501_Referral_Source__c</fullName>
        <description>ISA Referral: &quot;Referral Source&quot;; Also used for CCR, MLW and NCCC referrals</description>
        <label>Referral Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Referrers_Name__c</fullName>
        <description>HH Referral: &quot;Print name of staff completing this referral&quot;; ISA: &quot;Name&quot;;</description>
        <label>Referrer&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>